# fast_api_dio

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  requiriments.txt  script.sh
alembic/: env.py
alembic/versions/: f718807f2798_init_db.py
workout_api/: __init__.py  main.py  routers.py
workout_api/atleta/: controllers.py  models.py  schemas.py
workout_api/categoria/: models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_de_treinamento/: models.py  schemas.py
workout_api/configs/: database.py
workout_api/contrib/: dependencies.py  models.py  schemas.py
workout_api/contrib/repository/: dependencies.py  models.py
